--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Icon-green-line-d-default.svg/512px-Icon-green-line-d-default.svg.png">
     <title>Discord by GR</title>
 </head>
 <body>
@@ -34,7 +35,7 @@
     <div class="jumbotron">
         <div class="container">
             <div class="jumbo-content">
-            <h2>Il tuo posto per parlare</h2>
+            <h1>Il tuo posto per parlare</h1>
             <p>che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale o semplicemente di un piccolo gruppo di amici che vuole divertirsi assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
             <ul class="jumbo-ul">
                 <li class="jumbo-link scarica"><a href="#">&#129043; Scarica per Mac</a></li>
@@ -43,6 +44,21 @@
             </div>
         </div>
     </div>
+    <main>
+        <div class="container clearfix">
+            <div class="first-content">
+                <div class="img-rana float-left">
+                    <img src="img/item1.svg" alt="img-rana">
+                </div>
+                <div class="testo-rana float-left">
+                    <h2>un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>i server di Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senzaintasareuna chat di gruppo </p>
+                </div>
+            </div>
+        </div>
+        
+    </main>
+
     
 </body>
 </html>
